# tuts-agentic-ai-examples

./: .env.example  .gitignore  LICENSE  README.md
a2a/: .env.example  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
a2a/lessons/: README.md
a2a/lessons/05-first-a2a-agent/: README.md
a2a/lessons/05-first-a2a-agent/src/: qa_agent.ipynb  qa_agent.py
a2a/lessons/06-a2a-server/: README.md
a2a/lessons/06-a2a-server/src/: a2a_server.ipynb  agent_executor.py  server.py
a2a/lessons/07-a2a-client/: README.md
a2a/lessons/07-a2a-client/src/: a2a_client.ipynb
a2a/lessons/08-microsoft-agent-framework/: README.md
a2a/lessons/08-microsoft-agent-framework/src/: client.ipynb  client.py  loan_data.py  orchestrator.py  server.ipynb  server.py  validation_rules.py
a2a/lessons/09-google-adk/: README.md
a2a/lessons/09-google-adk/src/: client.ipynb  client.py  knowledge_base.py  orchestrator.py  research_agent.py  server.ipynb  server.py
a2a/lessons/10-langgraph/: README.md
a2a/lessons/10-langgraph/src/: client.py  orchestrator.py  server.py
a2a/lessons/11-crewai/: README.md
a2a/lessons/11-crewai/src/: client.py  orchestrator.py  server.py
a2a/lessons/12-openai-agents-sdk/: README.md
a2a/lessons/12-openai-agents-sdk/src/: client.py  orchestrator.py  server.py
a2a/lessons/13-claude-agent-sdk/: README.md
a2a/lessons/13-claude-agent-sdk/src/: client.py  orchestrator.py  server.py
a2a/lessons/14-multi-agent-deep-dive/: README.md  WALKTHROUGH.md
a2a/lessons/14-multi-agent-deep-dive/agents/: .env.example
a2a/lessons/14-multi-agent-deep-dive/ui/: package-lock.json  package.json
a2a/lessons/15-multi-agent-deep-dive/: README.md  WALKTHROUGH.md  _tmp_test.py
a2a/lessons/15-multi-agent-deep-dive/ui/: index.html  package-lock.json  package.json
a2a/lessons/_common/src/: __init__.py  loan_data.py  validation_rules.py
a2a/scripts/: README.md  _diag_server.ps1  lesson_05.py  lesson_06.py  lesson_07.py  lesson_08.py  lesson_09.py  run_all.ps1  run_all.sh  run_client.ps1  run_client.sh  run_lesson05.ps1  run_lesson05.sh  run_notebooks.ps1  run_server.ps1  run_server.sh  setup.ps1  setup.sh
agents/mono/agent-design-patterns-1/: README.md  pyproject.toml  requirements.txt
agents/mono/agent-design-patterns-1/01-single-agent/: README.md  agent_server.py  client.py  test_agent_server.py  util.py
agents/mono/agent-design-patterns-1/02-sequential-agents/: .pids.json  README.md  client.py  food_finder_server.py  orchestrator_server.py  transport_server.py  util.py
agents/mono/agent-design-patterns-1/03-parallel-agents/: .pids.json  README.md  client.py  concert_finder_server.py  museum_finder_server.py  orchestrator_server.py  restaurant_finder_server.py  synthesizer_server.py  test_synthesizer_server.py  util.py
ctx-sdlc/apps/simple/: pyproject.toml
ctx-sdlc/apps/simple/src/: app.py
ctx-sdlc/apps/simple/tests/: test_tasks.py
self-improving-agent/: .env.example  .gitignore  HANDS-ON-LAB.md  LESSON02.md  LESSON03.md  LESSON04.md  README.md  RUN.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  util.py
self-improving-agent/cleanloop/: .env.example  EXAMPLE.md  README.md  __init__.py  autogen_runtime.py  autonomy.py  challenger.py  clean_data.py  clean_data_runtime.py  clean_data_starter.py  cleanloop_console.py  dashboard.py  dashboard_artifacts.py  dashboard_metrics.py  dataset_contract.py  datasets.py  date_normalizer.py  export_writer.py  history_store.py  input_loader.py  loop.py  mutation_playbook.py  prepare.py  pyproject.toml  reranker.py  reset_workflow.py  sandbox.py  status_snapshot.py  tracing.py  util.py  verify.py
self-improving-agent/cleanloop/.gold/: finance_expected.csv
self-improving-agent/cleanloop/.input/: README.md  finance_invoices.csv  finance_invoices_adjustments.csv  finance_invoices_collections.csv  finance_invoices_flags.csv  finance_invoices_regional.csv
self-improving-agent/cleanloop/.plan/: execution-tracker.md  self-evolving-data-engineer-cleanloop-restructure-plan.md
self-improving-agent/cleanloop/docs/architecture/: execution-flow.md  export-contract.md  runtime-boundaries.md  system-overview.md
self-improving-agent/cleanloop/docs/data/: failure-cases.md  finance-fixture-walkthrough.md  mutation-cases.md
self-improving-agent/cleanloop/docs/lessons/: 03-orchestrator.md  (+8 more)
self-improving-agent/cleanloop/lessons/: lesson-01-the-mutation-engine.md  lesson-02-defining-the-pipeline-genome.md  lesson-03-the-orchestrator.md  lesson-04-observability-and-the-feedback-signal.md  lesson-05-the-judge-and-self-challenging-loops.md  lesson-06-test-time-search-and-re-ranking.md  lesson-07-conclusion-and-production-safety.md
self-improving-agent/prompt_evolution/: .env.example  README.md  __init__.py  autonomy.py  challenger.py  config.py  dashboard.py  dashboard_artifacts.py  dashboard_metrics.py  evaluator.py  hermes_client.py  history_store.py  loop.py  mutation_playbook.py  prepare.py  pyproject.toml  reranker.py  reset_workflow.py  sandbox.py  status_snapshot.py  tracing.py  util.py  verify.py
self-improving-agent/prompt_evolution/.gold/: coworking_guest_refund.md  hotel_late_credit.md  makerspace_missing_booking.md  pet_medication_update.md
self-improving-agent/skill_mastery/: .env.example  README.md  __init__.py  autonomy.py  challenger.py  config.py  dashboard.py  dashboard_artifacts.py  dashboard_metrics.py  evaluator.py  history_store.py  learner.py  loop.py  mutation_playbook.py  prepare.py  pyproject.toml  reranker.py  reset_workflow.py  sandbox.py  selector.py  status_snapshot.py  tracing.py  util.py  verify.py
self-improving-agent/skill_mastery/.data/: demonstrations.json  habits.json
self-improving-agent/skill_mastery/.gold/: language_transfer_recovery.md  makerspace_access_checkpoint.md  pet_medication_boundary.md
self-improving-agent/tests/: test_cleanloop_course_structure.py  test_cleanloop_exports.py  test_cleanloop_verify.py  test_prompt_evolution.py  test_prompt_evolution_advanced.py  test_python_compat.py  test_skill_mastery.py  test_skill_mastery_advanced.py
(+644 files in other folders)
