[project]
name = "a2a-examples"
version = "0.1.0"
description = "A2A tutorial course working examples"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }

dependencies = [
  "openai>=1.30.0",
  "a2a-sdk[http-server]>=0.3.24",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.0.0",
  "nbconvert>=7.0.0",
]

[tool.uv]
dev-dependencies = []
