[project]
name = "a2a-examples"
version = "0.1.0"
description = "A2A tutorial course working examples"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }

dependencies = [
  "openai>=1.30.0",
  "a2a-sdk[http-server]>=0.3.24",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.0.0",
  "nbconvert>=7.0.0",
  # Lesson 08 — Microsoft Agent Framework
  "agent-framework>=1.0.0rc2",
  "agent-framework-azure-ai>=1.0.0rc2",
  "pydantic>=2.0.0",
  # Lesson 09 — Google Agent Development Kit
  "google-adk[a2a]>=1.3.0",
  "litellm>=1.50.0",
  # Lesson 10 — LangGraph
  "langgraph>=0.4.0",
  "langchain-openai>=0.3.0",
  "langchain-core>=0.3.0",
  # Lesson 11 — CrewAI
  "crewai>=0.100.0",
  # Lesson 12 — OpenAI Agents SDK
  "openai-agents>=0.1.0",
  # Lesson 14 — Multi-Agent Deep Dive (Capstone)
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp-proto-http>=1.25.0",
  "opentelemetry-instrumentation-httpx>=0.46b0",
  "fastapi>=0.111.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.15.4"]

[tool.ruff]
line-length = 100
# All lessons manipulate sys.path before imports — E402 is intentional
lint.ignore = ["E402"]
