[project]
name = "agent-design-patterns-1"
version = "0.1.0"
description = "Runnable foundational agent design pattern examples using qwen3.5:0.8b by default"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }

dependencies = [
  "openai>=1.30.0",
  "a2a-sdk[http-server]==0.3.24",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
lint.ignore = ["E402"]
